# bazel-kotlin-vscode-extension

./: package.json
bazel/aspect/: MODULE.bazel  WORKSPACE  kotlin_lsp_info.bzl  stdlib.bzl
bazel/aspect/lsp_info_extractor/: BUILD.bazel
src/: constants.ts  extension.ts  githubUtils.ts
